service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gradle17-cd
spec:
  type: NodePort
  selector:
    app: gradle17-cd
  ports:
    - protocol: TCP
      port: 8081          
      targetPort: 8081  
      containerPort: 31800
